--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: 
+    - name: Installing dotnet
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.x
